[tool.poetry]
name = "resvg-py"
description = ""
authors = []
version = "0.0.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.10"
maturin = "1.4.0"

[tool.ruff]
select = ["ALL"]

[tool.ruff.isort]
known-first-party = ["resvg_py"]

[tool.ruff.per-file-ignores]
"**/*.pyi" = ["D1"]
"tests/test_*.py" = ["D1"]

[build-system]
requires = ["maturin==1.4.0"]
build-backend = "maturin"